--- a/templates/index_notWorking.html
+++ b/templates/index_notWorking.html
@@ -52,7 +52,14 @@
         </div>
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.min.js"></script> -->
+    <script type="module">
+
+        import * as d3 from "https://cdn.skypack.dev/d3@7";
+        
+        const div = d3.selectAll("div");
+        
+        </script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script src="./static/js/app_new.js"></script>
 </body>
